--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
   height: 320px;
   width: 320px;
   margin: 0 auto;
-  padding-top: 10px;
+  margin-top: 10px;
+  border: 1px solid black;
 }
 
 #clearButton {
