--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
+h1 {
+  text-align: center;
+}
+
 #container {
   height: 320px;
   width: 320px;
   margin: 0 auto;
-  margin-top: 10px;
+  margin-bottom: 10px;
   border: 1px solid black;
 }
 
