--- a/style.css
+++ b/style.css
@@ -10,9 +10,13 @@ h1 {
   border: 1px solid black;
 }
 
-#clearButton {
-  display: block;
-  margin: 0 auto;
-  width: 100px;
-  height: 20px;
+#inputs {
+  text-align: center;
+}
+
+#inputs button,
+#inputs select {
+  margin: 5px;
+  height: 40px;
+  font-size: 14px;
 }
