--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ h1 {
   text-align: center;
 }
 
+.cell {
+  float: left;
+  box-sizing: border-box;
+}
+
 #container {
   height: 320px;
   width: 320px;
