--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: Arial;
+}
+
 h1 {
   text-align: center;
 }
@@ -8,20 +12,42 @@ h1 {
 }
 
 #container {
-  height: 320px;
-  width: 320px;
+  height: 680px;
+  width: 680px;
   margin: 0 auto;
   margin-bottom: 10px;
-  border: 1px solid black;
+  border: 40px inset red;
+  border-top-width: 25px;
+  border-bottom-width: 25px;
 }
 
 #inputs {
   text-align: center;
 }
 
-#inputs button,
 #inputs select {
   margin: 5px;
   height: 40px;
   font-size: 14px;
+}
+
+select#gridSize {
+   -webkit-appearance: button;
+   -webkit-border-radius: 2px;
+   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+   -webkit-padding-end: 20px;
+   -webkit-padding-start: 2px;
+   -webkit-user-select: none;
+   background-image: url(http://i62.tinypic.com/15xvbd5.png), -webkit-linear-gradient(#FAFAFA, #F4F4F4 40%, #E5E5E5);
+   background-position: 97% center;
+   background-repeat: no-repeat;
+   border: 1px solid #AAA;
+   color: #555;
+   font-size: inherit;
+   margin: 20px;
+   overflow: hidden;
+   padding: 5px 10px;
+   text-overflow: ellipsis;
+   white-space: nowrap;
+   width: 300px;
 }
